fixed main page extra padding

--- a/pages/dev/test-site/main-page.styl
+++ b/pages/dev/test-site/main-page.styl
@@ -51,6 +51,7 @@ img
   width 100%
 
 .dashboard-img-container
+  width 100%
   display flex
   flex-flow row wrap
   justify-content center
@@ -86,6 +87,7 @@ img
 
 .map-container
   height 100vh
+  padding 10%
   & > .row
     height 50%
   background-color #363434
