--- a/pages/dev/test-site/main.styl
+++ b/pages/dev/test-site/main.styl
@@ -27,3 +27,6 @@
 .titles
   text-align left
   margin-left 30%
+
+.row
+  width 100%
